fs/db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-deployment
  labels:
    app: iitm
spec:
  selector:
    matchLabels:
      app: iitm
  replicas: 1
  template:
    metadata:
      labels:
        app: iitm
    spec:
      volumes:
        - name: mongo-pv
          persistentVolumeClaim:
            claimName: mongo-pv-claim
      containers:
        - name: mongodb
          image: mongo:6
          ports:
            - containerPort: 27017
          volumeMounts:
            - mountPath: "/data/db"
              name: mongo-pv

---
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
spec:
  selector:
    app: iitm
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
