fs/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iitm-web
spec:
  selector:
    matchLabels:
      app: iitm
  replicas: 2 
  template:
    metadata:
      labels:
        app: iitm
    spec:
      containers:
      - name: iitm-web
        image: iitm-web
        imagePullPolicy: Never
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: iitm-web-service
spec:
  selector:
    app: iitm
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
