fs/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: iitm-ingress
spec:
  rules:
  - host: k8s.site.com
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: iitm-service
            port:
              number: 4000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: iitm-web-service
            port:
              number: 80
